compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_import_with_comma_pos_not_end.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport option.{None,   }\n\npub fn main() {\n  option.Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{None,   }

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{None, Some   }

pub fn main() {
  Some(1)
}
