compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_block_unwraps_a_single_expression_in_a_binop.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main(x) {\n    { main(1) } * 3\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
    { main(1) } * 3
      ↑            
}


----- AFTER ACTION
pub fn main(x) {
     main(1)  * 3
}
