compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_in_single_line_pipeline_step_with_message.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  [1, 2, 3] |> echo as \"message\" |> wibble\n}"
---
----- BEFORE ACTION
pub fn main() {
  [1, 2, 3] |> echo as "message" |> wibble
               ↑                          
}


----- AFTER ACTION
pub fn main() {
  [1, 2, 3] |> wibble
}
