compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_removes_all_echos.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  echo wibble(echo 1, 2)\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo wibble(echo 1, 2)
              ↑         
}


----- AFTER ACTION
pub fn main() {
  wibble(1, 2)
}
