compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_removes_entire_echo_statement_used_with_literals_and_message.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  echo 1 as \"message\"\n  Nil\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1 as "message"
  ↑                  
  Nil
}


----- AFTER ACTION
pub fn main() {
  Nil
}
