compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_multiple_redundant_tuple_with_catch_all_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(code, 4, REMOVE_REDUNDANT_TUPLES)"
---
pub fn main() {
  case 1, 2, 3, 4 {
    2, 2, 2, 2 -> 0
    1, 2, _, _ -> 0
    _, _, 1, 2 -> 0
    _, _, _, _ -> 1
  }
}
