compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_redundant_tuple_in_case_subject_simple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  case #(1) { #(a) -> 0 }\n  case #(1, 2) { #(a, b) -> 0 }\n}\n"
---
pub fn main() {
  case 1 { a -> 0 }
  case 1, 2 { a, b -> 0 }
}
