compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__replace_spread_with_ignored_positional_fields.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble { Wibble(Int, label1: String, label2: Int) }\n\npub fn main() {\n  let Wibble(label1:, label2:, ..) = todo\n}"
---
----- BEFORE ACTION

pub type Wibble { Wibble(Int, label1: String, label2: Int) }

pub fn main() {
  let Wibble(label1:, label2:, ..) = todo
                               ↑         
}


----- AFTER ACTION

pub type Wibble { Wibble(Int, label1: String, label2: Int) }

pub fn main() {
  let Wibble(int, label1:, label2:) = todo
}
